--- a/SnowShare/rides/templates/accounts/index.html
+++ b/SnowShare/rides/templates/accounts/index.html
@@ -1,3 +1,8 @@
-<h3>Index</h3>
+<button type="button"><a href="{% url 'logout' %}">Logout!</a></button>
 
-<button type="button"><a href="{% url 'logout' %}">Logout!</button>
+<p>Name: {{user.username}} </p>
+<p>Email: {{user.email}} </p>
+<p>First Name: {{user.first_name}}</p>
+<p>Last Name: {{user.last_name}}</p>
+
+<button type="button"><a href="{% url 'add_car' %}">Add Car</a></button>
