added delete_car functionality

--- a/SnowShare/rides/templates/accounts/index.html
+++ b/SnowShare/rides/templates/accounts/index.html
@@ -10,7 +10,6 @@
 
 <h3> My Cars: </h3>
 {% for car in cars %}
-<p>Make: {{car.make}}</p>
-<p>Type: {{car.typ}}</p>
-<p>Capacity: {{car.capacity}}</p>
+<p>Make: {{car.make}} Type: {{car.typ}}</p>
+<form method="POST" action="{% url 'delete_car' car.id %}">{% csrf_token %}<button>Delete</button></form>
 {% endfor %}
