--- a/SnowShare/rides/templates/cars/car_detail.html
+++ b/SnowShare/rides/templates/cars/car_detail.html
@@ -1,4 +1,4 @@
-<p>Make: {{new_car.make}}</p>
+<p>Make: {{new_car.make}} Type: {{new_car.typ}}</p>
 <p>Type: {{new_car.typ}}</p>
 <p>Capacity: {{new_car.capacity}}</p>
 <p>Owner name: {{new_car.owner.first_name}} {{new_car.owner.last_name}}</p>
