--- a/SnowShare/rides/templates/accounts/register.html
+++ b/SnowShare/rides/templates/accounts/register.html
@@ -10,7 +10,7 @@
   <div class="row">
   <form method="POST" class="col-xs-12 col-sm-12 col-md-12">
   	{% csrf_token %}
-  <h2>Please fill all mandatory(*) fields</h2>
+  <h2>Please fill all the field to register</h2>
   <div class="form-group">
   	<input type="text" class="form-control" id="username" placeholder="Enter username *" name="username" required>
   </div>
