when you add cars only yours are included in the list

--- a/SnowShare/rides/templates/accounts/register.html
+++ b/SnowShare/rides/templates/accounts/register.html
@@ -31,6 +31,7 @@
    <div class="form-group">
       <input type="password" class="form-control" id="pwd" placeholder="Repeat password *" name="password2" required>
    </div>
+    <button type="submit" class="btn btn-success"><a href="{% url 'login' %}" style="color: white">Login</a><i class="glyphicon glyphicon-send"></i></button>
     <button type="submit" class="btn btn-success">Submit <i class="glyphicon glyphicon-send"></i></button>
   </form>
   </div>
