--- a/SnowShare/rides/templates/rides/ride_detail.html
+++ b/SnowShare/rides/templates/rides/ride_detail.html
@@ -1,4 +1,6 @@
 <p>Destination: {{new_ride.destination}}</p>
+<p>Date: {{new_ride.date}}</p>
 <p>Driver: {{new_ride.driver.username}}</p>
 <p>Car: {{new_ride.car}}</p>
+<p>Free seats: {{new_ride.free_seats}}</p>
 <p>Price: {{new_ride.price}}</p>
