--- a/SnowShare/rides/templates/accounts/index.html
+++ b/SnowShare/rides/templates/accounts/index.html
@@ -16,8 +16,8 @@
           My profile
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Add Ride</a>
-          <a class="dropdown-item" href="#">Add Car</a>
+          <a class="dropdown-item" href="{% url 'add_ride' %}">Add Ride</a>
+          <a class="dropdown-item" href="{% url 'add_car' %}">Add Car</a>
           <a class="dropdown-item" href="#">Profile</a>
         </div>
       </li>
@@ -48,11 +48,9 @@
 <p>First Name: {{user.first_name}}</p>
 <p>Last Name: {{user.last_name}}</p>
 
-<p><button type="button"><a href="{% url 'add_car' %}">Add Car</a></button><p/>
-<p><button type="button"><a href="{% url 'add_ride' %}">Add Ride</a></button><p/>
-<p><button type="button"><a href="{% url 'take_ride' %}">Take Ride</a></button></p>
-<h3> My Cars: </h3>
+<!-- <h3> My Cars: </h3>
 {% for car in cars %}
 <p>Make: {{car.make}} Type: {{car.typ}}</p>
 <form method="POST" action="{% url 'delete_car' car.id %}">{% csrf_token %}<button>Delete</button></form>
 {% endfor %}
+ -->
