added navbar to all of the html

--- a/SnowShare/rides/templates/accounts/register.html
+++ b/SnowShare/rides/templates/accounts/register.html
@@ -1,9 +1,5 @@
-{% load static %}
+{% extends "accounts/start.html" %} {% block content %}
 
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<link rel="stylesheet" href="{% static 'css/registration.css' %}">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 
 <div class="container">
@@ -37,3 +33,4 @@
   </div>
 </div>
 
+{% endblock %}
