--- a/SnowShare/rides/templates/rides/list.html
+++ b/SnowShare/rides/templates/rides/list.html
@@ -1,6 +1,10 @@
+{% extends "accounts/base.html" %} {% block content %}
+
 <h2> All avaliable rides: </h2>
 {% for ride in rides %}
 {% if ride.free_seats > 0 %}
 <p><a href="{% url 'view' ride.id %}">{{ ride.destination }}, {{ ride.free_seats}} seat(s), at {{ ride.price }} per seat.</a></p>
 {% endif %}
 {% endfor %}
+
+{% endblock %}
