--- a/SnowShare/rides/templates/accounts/login.html
+++ b/SnowShare/rides/templates/accounts/login.html
@@ -1,9 +1,4 @@
-{% load static %}
-
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<link rel="stylesheet" href="{% static 'css/registration.css' %}">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+{% extends "accounts/start.html" %} {% block content %}
 <!------ Include the above in your HEAD tag ---------->
 
 <div class="container">
@@ -28,3 +23,4 @@
 
 
 
+{% endblock %}
