--- a/SnowShare/rides/templates/resorts/detail.html
+++ b/SnowShare/rides/templates/resorts/detail.html
@@ -1,3 +1,5 @@
+{% extends "accounts/base.html" %} {% block content %}
+
 <h2>{{resort.name}}</h2>
 {% for ride in rides %}
 {% if ride.free_seats > 0 %}
@@ -5,3 +7,5 @@
 {% endif %}
 {% endfor %}
 <p><button type="button"><a href="{% url 'resorts' %}">Back to resort list</a></button><p/>
+
+{% endblock %}
