--- a/SnowShare/rides/templates/resorts/list.html
+++ b/SnowShare/rides/templates/resorts/list.html
@@ -1,4 +1,8 @@
+{% extends "accounts/base.html" %} {% block content %}
+
 <h2> Resorts: </h2>
 {% for resort in resorts %}
 <p><a href="{% url 'resort_details' resort.id %}">{{resort.name}}</a></p>
 {% endfor%}
+
+{% endblock %}
