--- a/SnowShare/rides/templates/rides/add.html
+++ b/SnowShare/rides/templates/rides/add.html
@@ -1,5 +1,8 @@
+{% extends "accounts/base.html" %} {% block content %}
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" name="Add Ride">
 </form>
+
+{% endblock %}
