--- a/SnowShare/rides/templates/accounts/login.html
+++ b/SnowShare/rides/templates/accounts/login.html
@@ -1,4 +1,10 @@
-{% extends "accounts/start.html" %} {% block content %}
+{% extends "accounts/base.html" %} {% block content %}
+{% load static %}
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<link rel="stylesheet" href="{% static 'css/registration.css' %}">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
 <!------ Include the above in your HEAD tag ---------->
 
 <div class="container">
@@ -16,8 +22,9 @@
 	<p>{{message}}</p>
 	{% endfor %}
     <button type="submit" class="btn btn-success">Login<i class="glyphicon glyphicon-send"></i></button>
-    <button style="margin-right:100px" type="submit" class="btn btn-success"><a href="{% url 'register' %}" style="color: white" >Register</a><i class="glyphicon glyphicon-send"></i></button>
+          <button style="margin-right:100px;"  class="btn btn-success"><a href="{% url 'register' %}" style="color: white" >Register</a><i class="glyphicon glyphicon-send"></i></button>
   </form>
+
   </div>
 </div>
 
