--- a/SnowShare/rides/templates/accounts/register.html
+++ b/SnowShare/rides/templates/accounts/register.html
@@ -1,5 +1,9 @@
-{% extends "accounts/start.html" %} {% block content %}
-
+{% extends "accounts/base.html" %} {% block content %}
+{% load static %}
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<link rel="stylesheet" href="{% static 'css/registration.css' %}">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 
 <div class="container">
@@ -27,7 +31,7 @@
    <div class="form-group">
       <input type="password" class="form-control" id="pwd" placeholder="Repeat password *" name="password2" required>
    </div>
-    <button type="submit" class="btn btn-success"><a href="{% url 'login' %}" style="color: white">Login</a><i class="glyphicon glyphicon-send"></i></button>
+    <button class="btn btn-success"><a href="{% url 'login' %}" style="color: white">Login</a><i class="glyphicon glyphicon-send"></i></button>
     <button type="submit" class="btn btn-success">Submit <i class="glyphicon glyphicon-send"></i></button>
   </form>
   </div>
