updated take_ride view and some templates

--- a/SnowShare/rides/templates/accounts/base.html
+++ b/SnowShare/rides/templates/accounts/base.html
@@ -28,14 +28,14 @@
           Rides
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Rides</a>
+          <a class="dropdown-item" href="{% url 'list' %}">Rides</a>
           <a class="dropdown-item" href="#">Rides In</a>
           <a class="dropdown-item" href="#">Posted Rides</a>
         </div>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="#">Resorts</a>
+        <a class="nav-link" href="{% url 'resorts' %}">Resorts</a>
       </li>
       
     </ul>
