--- a/SnowShare/rides/templates/cars/add_car.html
+++ b/SnowShare/rides/templates/cars/add_car.html
@@ -1,5 +1,11 @@
-<form method="POST">
-	{% csrf_token %}
-	{{ form.as_p }}
-	<input type="submit" name="Add Car">
-</form>
+{% extends "accounts/base.html" %} {% block content %}
+<body style="background-color:aqua;">
+	<div style="border-style:solid; border-width:2px; background-color:white; width:80%; margin-top:5%; margin-left:10%">
+		<form method="POST">
+			{% csrf_token %}
+			{{ form.as_p }}
+			<input type="submit" name="Add Car">
+		</form>
+	</div>
+</body>
+{% endblock %}
