driver/ passanger rides

--- a/SnowShare/rides/templates/accounts/base.html
+++ b/SnowShare/rides/templates/accounts/base.html
@@ -28,9 +28,9 @@
           Rides
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="{% url 'list' %}">Rides</a>
-          <a class="dropdown-item" href="#">Rides In</a>
-          <a class="dropdown-item" href="#">Posted Rides</a>
+          <a class="dropdown-item" href="{% url 'list' %}">All Rides</a>
+          <a class="dropdown-item" href="{% url 'passanger' %}">Rides I'm taking</a>
+          <a class="dropdown-item" href="{% url 'driver' %}">Rides I'm driving</a>
         </div>
       </li>
 
