Show passangers in ride details

--- a/SnowShare/rides/templates/rides/detail.html
+++ b/SnowShare/rides/templates/rides/detail.html
@@ -7,4 +7,9 @@
 <p>Free seats: {{ride.free_seats}}</p>
 <p>Price: {{ride.price}}</p>
 
+Passangers in this ride:
+{% for passanger in psg%}
+{{passanger.username}};
+{% endfor%}
+
 {% endblock %}
