--- a/SnowShare/rides/templates/rides/detail.html
+++ b/SnowShare/rides/templates/rides/detail.html
@@ -8,6 +8,7 @@
       <th scope="col">Car</th>
       <th scope="col">Free seats</th>
       <th scope="col">Price</th>
+      <th scope="col">Passangers</th>
     </tr>
   </thead>
   <tbody>
@@ -18,6 +19,7 @@
       <td>{{ride.car}}</td>
       <td>{{ride.free_seats}}</td>
       <td>{{ride.price}}</td>
+      <td>{{names}}</td>
     </tr>
   </tbody>
 </table>
