--- a/SnowShare/rides/templates/rides/add.html
+++ b/SnowShare/rides/templates/rides/add.html
@@ -1,8 +1,41 @@
 {% extends "accounts/base.html" %} {% block content %}
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" name="Add Ride">
-</form>
+
+<body >
+	<div style="border-style:solid; border-width:2px; background-color:white; width:80%; margin-top:5%; margin-left:10%;">
+		<h1 style="text-align: center">Add new ride</h1>
+	    <form method="POST">
+		<table class="table">
+		  <tbody>
+
+		    {% csrf_token %}
+		    <tr>
+	    	  <th>{{form.destination.label}}</th>
+		      <td>{{form.destination}}</td>
+		    </tr>
+		    <tr>
+		    	<th>{{form.date.label}}</th>
+		    	<td>{{form.date}}</td>
+		    </tr>
+		    <tr>
+		    	<th>{{form.car.label}}</th>
+		    	<td>{{form.car}}</td>
+		    </tr>
+		    <tr>
+		    	<th>{{form.free_seats.label}}</th>
+		    	<td>{{form.free_seats}}</td>
+		    </tr>
+		    <tr>
+		    	<th>{{form.price.label}}</th>
+		    	<td>{{form.price}}</td>
+		    </tr>
+		    
+		  </tbody>
+
+		</table>
+		    <input style="margin-left: 40%" type="submit" name="Add Ride">
+		</form>
+		
+	</div>
+</body>
 
 {% endblock %}
