--- a/SnowShare/rides/templates/rides/passanger.html
+++ b/SnowShare/rides/templates/rides/passanger.html
@@ -1,12 +1,21 @@
 {% extends "accounts/base.html" %} {% block content %}
 <h2>{{name}} is riding to:</h2>
 
-<ul>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Ride Destination</th>
+      <th scope="col">Ride date</th>
+    </tr>
+  </thead>
 {% for ride in rides %}
-<li>
-    <a href="{% url 'view' ride.id %}">{{ride.destination}}, on {{ride.date}}</a>>
-</li>
-
+  <tbody>
+    <tr>
+      <th scope="row"><a href="{% url 'view' ride.id %}">{{ride.destination}}</a></th>
+      <td>{{ride.date}}</td>
+    </tr>
+  </tbody>
+</table>
 {% endfor%}
 </ul>
 
