--- a/SnowShare/rides/templates/accounts/base.html
+++ b/SnowShare/rides/templates/accounts/base.html
@@ -19,7 +19,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="{% url 'add_ride' %}">Add Ride</a>
           <a class="dropdown-item" href="{% url 'add_car' %}">Add Car</a>
-          <a class="dropdown-item" href="#">Profile</a>
+          <a class="dropdown-item" href="{% url 'index' %}">View Profile</a>
         </div>
       </li>
 
