added phone and startPoint in rides model

--- a/SnowShare/rides/templates/resorts/detail.html
+++ b/SnowShare/rides/templates/resorts/detail.html
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th scope="col">Ride Car</th>
+      <th scope="col">Start Point</th>
       <th scope="col">Price</th>
       <th scope="col">Free seats</th>
       <th scope="col">Reserve Seat</th>
@@ -19,6 +20,7 @@
     {% csrf_token %}
     <tr>
       <th scope="row">{{ride.car}}</th>
+      <td>{{ride.startPoint}}</td>
       <td>{{ride.price}}</td>
       <td>{{ride.free_seats}}</td>
       <td><button type="submit" name="ride_id" value={{ride.id}}>Reserve</button></td>
