--- a/SnowShare/rides/templates/rides/detail.html
+++ b/SnowShare/rides/templates/rides/detail.html
@@ -8,6 +8,8 @@
       <th scope="col">Driver</th>
       <th scope="col">Car</th>
       <th scope="col">Free seats</th>
+      <th scope="col">Start Point</th>
+      <th scope="col">Phone</th>
       <th scope="col">Price</th>
       <th scope="col">Passangers</th>
     </tr>
@@ -19,6 +21,8 @@
       <td>{{ride.driver.username}}</td>
       <td>{{ride.car}}</td>
       <td>{{ride.free_seats}}</td>
+      <td>{{ride.startPoint}}</td>
+      <td>{{ride.phone}}</td>
       <td>{{ride.price}}</td>
       <td>{{names}}</td>
     </tr>
