added footer to the page

--- a/SnowShare/rides/templates/accounts/base.html
+++ b/SnowShare/rides/templates/accounts/base.html
@@ -43,4 +43,15 @@
   <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="float: right; color: white;"><a href="{% url 'logout' %}">Logout</a></button>
 </nav>
 
+
+
 {% block content %} {% endblock %}
+<footer class="page-footer font-small blue" style="position: fixed; bottom: 0; width:100%">
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3" style="color:white; background-color:#4B515D ">© 2020 Copyright:
+    <a>Team Panda</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
